# pylon

./: Cargo.toml  README.md  config_default.toml  repomix-output.txt  setup-pylon.sh
.github/workflows/: update-badges.yml
images/: admin.webp:Zone.Identifier  gauges.webp:Zone.Identifier  network.webp:Zone.Identifier  processes.webp:Zone.Identifier  sysinfo.webp:Zone.Identifier
src/: config_manager.rs  main.rs  remote.rs  repomix-output.txt  server.rs  system_info.rs  updater.rs
static/css/: styles.css
static/js/: admin.js  app.js  dashboard.js  main.js  modal.js
