[package]
name = "pylon"
version = "0.1.3"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.7"
sysinfo = { version = "0.28", features = ["serde"] }
openssl = { version = "0.10", features = ["vendored"] }

reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
notify = "4"

config = "0.13"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
